year cat alignment fixes

--- a/apps-n-tools/src/index.css
+++ b/apps-n-tools/src/index.css
@@ -360,8 +360,6 @@ button:focus-visible {
   height: 100%;
   margin-right: 10px;
   margin-left: 10px;
-  padding-right: 2px;
-  padding-left: 2px;
 }
 
 .condensed-icon-div {
